Fix mobile issue on mini-projects page.
The styling wasn't letting in-word line breaking, which could cause
some screens to show a horizontal scroll bar. I think alternating-
in-color lines will help make this easier to read, but this gets me
most of the way there.

Test Plan:
`make build serve`

--- a/styles/mini-projects-index.less
+++ b/styles/mini-projects-index.less
@@ -11,3 +11,7 @@
 .timestamp-anchor {
 	color: @dateTimeColor;
 }
+
+.literal-block {
+	overflow-wrap: break-word;
+}
